# linux_server

./: .clang-format  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  README_DOCKER.md  compose.yaml  todolist.md
client/: CMakeLists.txt  client.cc
cmake/: Dependencies.cmake
config/: server.docker.json  server.example.json  stress.real.example.json
docs/: benchmark.md  master_bugfix_report.md  project_structure.md  real_backend_pool_benchmark_report.md  real_backend_stress_report.md  roadmap.md  test.md
docs/superpowers/plans/: 2026-06-21-real-backend-business-stress-test.md  2026-06-24-docker-development-environment.md  2026-06-25-cmake-modular-targets.md  2026-06-25-todo-comment-cleanup.md
docs/superpowers/specs/: 2026-06-21-business-stress-test-design.md  2026-06-21-real-backend-business-stress-test-design.md  2026-06-23-offline-message-pull-pagination-design.md  2026-06-24-docker-development-environment-design.md  2026-06-25-cmake-modular-targets-design.md  2026-06-25-todo-comment-cleanup-design.md
include/: ConnectionMeta.h  EchoHandler.h  IMessageHandler.h  TcpConnection.h  TcpServer.h
include/app/: main_runner.h
include/cache/: cached_user_repository.h  message_dedup_cache.h  redis_rate_limiter.h
include/codec/: json_codec.h  packet_codec.h
include/common/: error_code.h  logger.h  message.h  response.h  types.h  validator.h
include/concurrency/: thread_pool.h
include/config/: config_loader.h  db_config.h  redis_config.h  server_config.h
include/db/: db_connection.h  db_connection_factory.h  db_pool.h  db_pool_config.h  friend_repository.h  group_repository.h  message_repository.h  mysql_statement.h  user_repository.h
include/handler/: messafe_handler.h  message_handler.h
include/model/: connection_session.h  friendship_record.h  group_record.h  message_record.h  user_record.h
include/net/: ConnectionContext.h  ConnectionMeta.h  IMessageHandler.h  ResponseTask.h  TcpConnection.h  TcpServer.h
include/protocol/: auth_messages.h  chat_messages.h  friend_messages.h  group_messages.h  protocol_helper.h
include/redis/: redis_client.h  redis_connection.h  redis_pool.h
include/security/: password_hasher.h
include/server/: connection_manager.h  redis_session_store.h  session_manager.h
include/service/: chat_service.h  friend_service.h  group_service.h  user_service.h
include/stream/: redis_push_stream.h  remote_push.h
sql/: 001_create_chat_tables.sql
src/: CMakeLists.txt  ConnectionContext.cc  EchoHandler.cc  TcpConnection.cc  TcpServer.cc  main.cc  server.cc
src/app/: main_runner.cc
src/cache/: cached_user_repository.cc  message_dedup_cache.cc  redis_rate_limiter.cc
src/codec/: json_codec.cc  packet_codec.cc
src/common/: logger.cc  validator.cc
src/concurrency/: thread_pool.cc
src/config/: config_loader.cc  redis_config.cc
src/db/: db_connection.cc  db_pool.cc  friend_repository.cc  group_repository.cc  message_repository.cc  mysql_statement.cc  user_repository.cc
src/handler/: message_handler.cc
src/protocol/: protocol_helper.cc
src/redis/: redis_client.cc  redis_connection.cc  redis_pool.cc
src/security/: password_hasher.cc
src/server/: redis_session_store.cc  session_manager.cc
src/service/: chat_service.cc  friend_service.cc  group_service.cc  user_service.cc
src/stream/: redis_push_stream.cc
tests/: CMakeLists.txt  README_message_handler_cases.md  auth_integration_test.cc  business_stress_test.cc  cached_user_repository_test.cc  chat_service_cache_test.cc  chat_service_redis_test.cc  chat_service_test.cc  chat_service_validation_test.cc  config_loader_test.cc  connection_context_test.cc  cross_server_push_router_test.cc  db_connection_test.cc  db_pool_test.cc  fake_auth_server.cc  fake_friend_repository.h  fake_group_repository.h  fake_message_repository.h  fake_redis_client.h  fake_server.cc  fake_user_repository.h  friend_repository_test.cc  friend_service_test.cc  group_repository_test.cc  group_service_test.cc  in_memory_session_store.h  json_codec_test.cc  logger_test.cc  main_test.cc  message_dedup_cache_test.cc  message_handler_test.cc  message_record_test.cc  message_repository_security_integration_test.cc  message_repository_test.cc  packet_codec_test.cc  password_hasher_test.cc  redis_config_test.cc  redis_connection_integration_test.cc  redis_connection_test.cc  redis_pool_test.cc  (+17 more)
